--- a/index.html
+++ b/index.html
@@ -298,7 +298,14 @@
   <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
-      <pre><code>BibTex Code Here</code></pre>
+      <pre><code>
+      @inproceedings{RanaMahadevan23Arxiv,
+      title={DynaMITe: Dynamic Query Bootstrapping for Multi-object Interactive Segmentation Transformer},
+      author={Rana, Amit and Mahadevan, Sabarinath and Hermans, Alexander and Leibe, Bastian},
+      booktitle=arXiv preprint arXiv:<id>,
+      year={2023}
+      }
+</code></pre>
     </div>
 </section>
 <!--End BibTex citation -->
