--- a/index.html
+++ b/index.html
@@ -68,7 +68,8 @@
                   </div>
 
                   <div class="is-size-5 publication-authors">
-                    <span class="author-block">RWTH Aachen University<br>Conferance name and year</span>
+<!--                     <span class="author-block">RWTH Aachen University<br>Conferance name and year</span> -->
+                    <span class="author-block">RWTH Aachen University<br></span>
                     <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span>
                   </div>
 
