--- a/index.html
+++ b/index.html
@@ -178,6 +178,23 @@
 </section>
 <!-- End paper abstract -->
 
+<!-- Paper abstract -->
+<section class="section hero is-light">
+  <div class="container is-max-desktop">
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-four-fifths">
+        <h2 class="title is-3">News</h2>
+        <div class="content has-text-justified">
+          <p>
+            We recently presented our interactive transformer in the <a href="https://sites.google.com/view/t4v-cvpr23/papers">Transformers for Vision Workshop (T4V) at CVPR 2023</a> last week. The paper titled <b>Clicks as Queries: Interactive Transformer for Multi-instance Segmentation</b> can be downloaded <a href="https://vision.rwth-aachen.de/media/papers/227/camera_ready.pdf">here</a>. 
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- End paper abstract -->
+
 
 <!-- Image carousel -->
 <!-- <section class="hero is-small">
@@ -304,6 +321,13 @@
       title={DynaMITe: Dynamic Query Bootstrapping for Multi-object Interactive Segmentation Transformer},
       author={Rana, Amit and Mahadevan, Sabarinath and Hermans, Alexander and Leibe, Bastian},
       booktitle=arXiv preprint arXiv:<id>,
+      year={2023}
+      }
+
+      @inproceedings{RanaMahadevan23cvprw,
+      title={Clicks as Queries: Interactive Transformer for Multi-instance Segmentation},
+      author={Rana, Amit and Mahadevan, Sabarinath and Alexander Hermans and Leibe, Bastian},
+      booktitle={CVPRW},
       year={2023}
       }
 </code></pre>
