--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 <!-- End paper abstract -->
 
 <!-- Paper abstract -->
-<section class="section hero is-light">
+<section class="section">
   <div class="container is-max-desktop">
     <div class="columns is-centered has-text-centered">
       <div class="column is-four-fifths">
