--- a/index.html
+++ b/index.html
@@ -185,9 +185,17 @@
       <div class="column is-four-fifths">
         <h2 class="title is-3">News</h2>
         <div class="content has-text-justified">
-          <p>
-            We recently presented our interactive transformer in the <a href="https://sites.google.com/view/t4v-cvpr23/papers">Transformers for Vision Workshop (T4V) at CVPR 2023</a> last week. The paper titled <b>Clicks as Queries: Interactive Transformer for Multi-instance Segmentation</b> can be downloaded <a href="https://vision.rwth-aachen.de/media/papers/227/camera_ready.pdf">here</a>. 
-          </p>
+          <ul>
+            <li>
+              <p>
+                <b>14 July, 2023:</b> DynaMITe is accepted at ICCV 2023. See you in Paris!!!
+              </p>
+            </li>
+            <li>
+              <p>
+                <b>23 July, 2023</b>We recently presented our interactive transformer in the <a href="https://sites.google.com/view/t4v-cvpr23/papers">Transformers for Vision Workshop (T4V) at CVPR 2023</a> last week. The paper titled <b>Clicks as Queries: Interactive Transformer for Multi-instance Segmentation</b> can be downloaded <a href="https://vision.rwth-aachen.de/media/papers/227/camera_ready.pdf">here</a>. 
+              </p>
+            </li>
         </div>
       </div>
     </div>
